signup form validations. more Cognito integration

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,6 +29,9 @@
       <div padding text-center>
         <p>Don't have an account yet? <a (click)="signup()">Create one.</a></p>
       </div>
+      <div padding text-center>
+        <a (click)="forgotPassword()">Forgot Password</a>
+      </div>
 
       <div padding text-center>
         <p *ngIf="errMsg" >Problems logging in? Contact us at mobile@agility360app.net or call us at (469) 208-6300.</p>
