--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -7,12 +7,37 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>ForgotPassword</ion-title>
+    <ion-title>Reset Password</ion-title>
   </ion-navbar>
 
 </ion-header>
 
+<ion-content>
+  <div text-center class="logo">
+    <img src="assets/agility360-logo-transparent-512x512.png" />
+  </div>
+  <form (submit)="resetPassword()">
+    <strong><p class="error-message" *ngIf="errMsg" >{{errMsg}}</p></strong>
+    <ion-list>
 
-<ion-content padding>
+      <ion-item>
+        <ion-label floating>Username or email address</ion-label>
+        <ion-input [(ngModel)]="username" type="text" autocorrect="off" autocapitalize="none" name="username"></ion-input>
+      </ion-item>
 
+      <ion-item no-lines>
+        <button
+            ion-button
+            color="primary"
+            block
+            padding
+            [disabled]="!username">Send Password Reset Email</button>
+      </ion-item>
+
+
+      <div padding text-center>
+        <p *ngIf="errMsg" >Problems logging in? Contact us at mobile@agility360app.net or call us at (469) 208-6300.</p>
+      </div>
+    </ion-list>
+  </form>
 </ion-content>
