completed Forgot Password workflow

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -130,7 +130,7 @@
       </div>
 
       <div padding text-center>
-        <p><a (click)="login()">Return to login</a>
+        <p><a (click)="login()">Return to login page</a>
       </div>
 
     </ion-list>
