sign in workflow tweaks

--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -26,6 +26,10 @@
             block
             padding
             [disabled]="!username">Send Password Reset Email</button>
+
+        <div padding text-center>
+          <p><a (click)="login()">Return to login page</a>
+        </div>
       </ion-item>
 
 
