--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Create An Account</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content>
   <div text-center class="logo">
     <img src="assets/agility360-logo-transparent-512x512.png" />
@@ -123,15 +117,17 @@
       <ion-item-divider no-lines></ion-item-divider>
 
       <div padding>
+        <p text-center>By clicking Sign Up, you agree to Agility 360's User Agreement, Privacy Policy and Cookie Policy</p>
         <button ion-button
                 color="primary"
                 block
                 [disabled]="!formGroup.valid">Sign Up</button>
+
+        <div text-center>
+          <p><a (click)="login()">Return to login page</a>
+        </div>
       </div>
 
-      <div padding text-center>
-        <p><a (click)="login()">Return to login page</a>
-      </div>
 
     </ion-list>
   </form>
