--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -2,27 +2,61 @@
 
   <ion-slides pager="true" paginationType="bullets">
     <ion-slide>
-      <div text-center class="welcome-logo">
-        <img src="assets/agility360-logo-transparent-512x512.png" />
-        <h1>Stay connected to your recruiter</h1>
-        <img src="assets/arrow-right.png" class="right-arrow" />
-      </div>
+
+      <ion-card>
+        <ion-card-header >
+          <div class="welcome-logo">
+            <img src="assets/agility360-logo-transparent-512x512.png" />
+          </div>
+        </ion-card-header>
+        <ion-card-content>
+          <h1>Stay connected to your recruiter</h1>
+        </ion-card-content>
+
+      </ion-card>
+      <img src="assets/arrow-right.png" class="right-arrow" />
 
     </ion-slide>
     <ion-slide>
-      <h1>Create your professional profile</h1>
-      <p>shooby dooby do</p>
+      <ion-card>
+        <ion-card-header >
+          <div class="welcome-logo">
+            <img src="assets/agility360-logo-transparent-512x512.png" />
+          </div>
+        </ion-card-header>
+        <ion-card-content>
+          <h1>Create your professional profile</h1>
+          <p>shooby dooby do</p>
+        </ion-card-content>
+      </ion-card>
       <img src="assets/arrow-right.png" class="right-arrow" />
     </ion-slide>
     <ion-slide>
-      <h1>Find job opportunities</h1>
-      <p>shooby dooby do</p>
+      <ion-card>
+        <ion-card-header >
+          <div class="welcome-logo">
+            <img src="assets/agility360-logo-transparent-512x512.png" />
+          </div>
+        </ion-card-header>
+        <ion-card-content>
+          <h1>Find job opportunities</h1>
+          <p>shooby dooby do</p>
+        </ion-card-content>
+      </ion-card>
       <img src="assets/arrow-right.png" class="right-arrow" />
     </ion-slide>
     <ion-slide>
-      <img src="assets/arrow-left.png" class="left-arrow" />
-      <h1>Stay connected to your recruiter</h1>
-      <p>shooby dooby do</p>
+      <ion-card>
+        <ion-card-header >
+          <div class="welcome-logo">
+            <img src="assets/agility360-logo-transparent-512x512.png" />
+          </div>
+        </ion-card-header>
+        <ion-card-content>
+          <h1>Stay connected to your recruiter</h1>
+          <p>shooby dooby do</p>
+        </ion-card-content>
+      </ion-card>
     </ion-slide>
   </ion-slides>
 
