--- a/src/pages/terms-of-use/terms-of-use.html
+++ b/src/pages/terms-of-use/terms-of-use.html
@@ -1,18 +1,55 @@
 <!--
-  Generated template for the TermsOfUsePage page.
+  written by: McDaniel
+  date:       august 2017
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
 -->
+
 <ion-header>
-
   <ion-navbar>
-    <ion-title>TermsOfUse</ion-title>
+    <ion-title>Terms of Use</ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content padding class="app-background">
+  <ion-refresher (ionRefresh)="refreshData($event)">
+    <ion-refresher-content
+                  pullingIcon="arrow-dropdown"
+                  pullingText="Pull to refresh"
+                  refreshingSpinner="circles"
+                  refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
 
-<ion-content padding>
+  <div *ngIf="posts">
+    <ion-list *ngFor="let post of posts">
+      <ion-card>
+        <div class="card-title-block">
+          <ion-item>
+            <ion-avatar item-start>
+              <img src="https://cdn.agility360app.net/">
+            </ion-avatar>
+            <p>Updated: {{ post.date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+          </ion-item>
+        </div>
 
+        <ion-card-content>
+          <ion-item>
+            <ion-row>
+              <ion-col>
+                <img src="{{ post.featured_media_url }}">
+              <div class="wordpress" text-wrap [innerHtml]="post.content.rendered | safeHtml"></div>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-card-content>
+
+      </ion-card>
+
+    </ion-list> <!-- *ngFor="let post of posts" -->
+  </div> <!-- *ngIf="posts" -->
+
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{ errMess }}</h4>
+  </div>
 </ion-content>
