--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -48,11 +48,11 @@
     </button>
 
     <button ion-item [navPush]="privacyPolicyPage">
-      <ion-icon name="ribbon" item-start></ion-icon>
+      <ion-icon name="lock" item-start></ion-icon>
       <ion-label>Agility 360 Privacy Policy</ion-label>
     </button>
     <button ion-item [navPush]="termsOfUse">
-      <ion-icon name="ribbon" item-start></ion-icon>
+      <ion-icon name="book" item-start></ion-icon>
       <ion-label>Agility 360 Terms of Use</ion-label>
     </button>
   </ion-list>
