scaffold Password Change screen

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -47,20 +47,24 @@
       <ion-label>Certifications</ion-label>
     </button>
 
-    <button ion-item [navPush]="privacyPolicyPage">
+  </ion-list>
+
+  <ion-list padding>
+    <button ion-item [navPush]="passwordChangePage" no-lines>
       <ion-icon name="lock" item-start></ion-icon>
+      <ion-label>Change Password</ion-label>
+    </button>
+    <button ion-item [navPush]="privacyPolicyPage">
+      <ion-icon name="book" item-start></ion-icon>
       <ion-label>Agility 360 Privacy Policy</ion-label>
     </button>
     <button ion-item [navPush]="termsOfUse">
       <ion-icon name="book" item-start></ion-icon>
       <ion-label>Agility 360 Terms of Use</ion-label>
     </button>
-  </ion-list>
-
-  <ion-list padding>
     <button ion-item (click)="logout()" no-lines>
       <ion-icon name="log-out" item-start></ion-icon>
-      <ion-label color="danger">Logout</ion-label>
+      <ion-label>Logout</ion-label>
     </button>
   </ion-list>
 
