--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,7 +10,7 @@
   <div class="heading">
     <div>
       <h6 text-center>
-        <span style="color: #2897C2;">User:</span>
+        <span style="color: #2897C2;">Username:</span>
         <span style="color: gray;">{{ this.username }}</span>
       </h6>
     </div>
