--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -26,7 +26,7 @@
     </ion-item>
 
     <ion-item-divider>
-      Full Name
+      Your Full Name
     </ion-item-divider>
     <ion-item no-lines>
       <ion-label class="agility-label">First: </ion-label>
@@ -48,7 +48,7 @@
     </ion-item>
 
     <ion-item-divider>
-      Address Information
+      Your Address
     </ion-item-divider>
     <ion-item no-lines>
       <ion-label class="agility-label">City: </ion-label>
@@ -64,7 +64,7 @@
     </ion-item>
 
     <ion-item-divider>
-      Contact Information
+      Your Contact Information
     </ion-item-divider>
     <ion-item no-lines>
       <ion-label class="agility-label">Phone: </ion-label>
@@ -73,14 +73,14 @@
       </div>
     </ion-item>
     <ion-item no-lines>
-      <ion-label class="agility-label">Email address: </ion-label>
+      <ion-label class="agility-label">Email: </ion-label>
       <div item-content>
         {{ this.card.email }}
       </div>
     </ion-item>
 
     <ion-item-divider>
-      Industry
+      Your Industry
     </ion-item-divider>
     <ion-item no-lines>
       <div item-content>
@@ -94,7 +94,7 @@
     </ion-item>
 
     <ion-item-divider>
-      Profession
+      Your Profession
     </ion-item-divider>
     <ion-item no-lines>
       <div item-content>
