setup candidate Industry/Profession elements

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -84,12 +84,12 @@
     </ion-item-divider>
     <ion-item no-lines>
       <div item-content>
-        {{ this.card.industry_id }}
+        {{ this.card.industry }}
       </div>
     </ion-item>
     <ion-item no-lines>
       <div item-content>
-        {{ this.card.subindustry_id }}
+        {{ this.card.subindustry }}
       </div>
     </ion-item>
 
@@ -98,12 +98,12 @@
     </ion-item-divider>
     <ion-item no-lines>
       <div item-content>
-        {{ this.card.profession_id }}
+        {{ this.card.profession }}
       </div>
     </ion-item>
     <ion-item no-lines>
       <div item-content>
-        {{ this.card.subprofession_id }}
+        {{ this.card.subprofession }}
       </div>
     </ion-item>
 
