wired up Industry and Profession drop-downs

--- a/src/pages/profile-edit/profile-edit.html
+++ b/src/pages/profile-edit/profile-edit.html
@@ -22,6 +22,14 @@
 
     <ion-list>
       <ion-item>
+        <ion-label>Are You Currently Job Hunting?</ion-label>
+        <ion-select class="editable-field" [(ngModel)]="obj.job_hunting" name="job_hunting">
+          <ion-option value="1">Yes</ion-option>
+          <ion-option value="0">No</ion-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-item>
         <ion-label floating>First Name</ion-label>
         <ion-input class="editable-field" type="text" [(ngModel)]="obj.first_name" autocorrect="off" autocapitalize="none" name="first_name"></ion-input>
       </ion-item>
@@ -51,23 +59,32 @@
         <ion-input class="editable-field" type="tel" [(ngModel)]="obj.phone_number" autocorrect="off" autocapitalize="none" name="phone_number"></ion-input>
       </ion-item>
 
-      <ion-item>
-        <ion-label>Are You Currently Job Hunting?</ion-label>
-        <ion-checkbox class="editable-field" [(ngModel)]="obj.job_hunting" name="job_hunting"></ion-checkbox>
+
+      <ion-item-divider>Your Industry</ion-item-divider>
+      <ion-item no-lines>
+        <ion-select class="editable-field" [(ngModel)]="obj.industry_id" name="industry_id">
+          <ion-option *ngFor="let i of industries" value="{{ i.id }}">{{ i.description }}</ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item no-lines>
+        <ion-select class="editable-field" [(ngModel)]="obj.subindustry_id" name="subindustry_id">
+          <ion-option *ngFor="let i of industries" value="{{ i.id }}">{{ i.description }}</ion-option>
+        </ion-select>
       </ion-item>
 
-      <ion-item>
-        <ion-label floating>Your Industry</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="obj.industry_id" name="industry_id"></ion-input>
-        <ion-input class="editable-field" type="text" [(ngModel)]="obj.subindustry_id" name="subindustry_id"></ion-input>
+      <ion-item-divider>Your Profession</ion-item-divider>
+      <ion-item no-lines>
+        <ion-select class="editable-field" [(ngModel)]="obj.profession_id" name="profession_id">
+          <ion-option *ngFor="let p of professions" value="{{ p.id }}">{{ p.description }}</ion-option>
+        </ion-select>
       </ion-item>
-
-      <ion-item>
-        <ion-label floating>Your Profession</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="obj.profession_id" name="profession_id"></ion-input>
-        <ion-input class="editable-field" type="text" [(ngModel)]="obj.subprofession_id" name="subprofession_id"></ion-input>
+      <ion-item no-lines>
+        <ion-select class="editable-field" [(ngModel)]="obj.subprofession_id" name="subprofession_id">
+          <ion-option *ngFor="let p of professions" value="{{ p.id }}">{{ p.description }}</ion-option>
+        </ion-select>
       </ion-item>
 
     </ion-list>
   </form>
+
 </ion-content>
