modify image asset paths

--- a/src/pages/resume/resume.html
+++ b/src/pages/resume/resume.html
@@ -27,7 +27,7 @@
         <div class="card-title-block">
           <ion-item>
             <ion-avatar item-start>
-              <img src="https://cdn.agility360app.net/">
+              <ion-img src="https://cdn.agility360app.net/">
             </ion-avatar>
             <h2>{{ post.title.rendered }}</h2>
           </ion-item>
@@ -37,7 +37,7 @@
           <ion-item>
             <ion-row>
               <ion-col>
-                <img src="{{ post.featured_media_url }}">
+                <ion-img src="{{ post.featured_media_url }}">
               <div class="wordpress" text-wrap [innerHtml]="post.content.rendered | safeHtml"></div>
               </ion-col>
             </ion-row>
