--- a/src/pages/terms-of-use/terms-of-use.html
+++ b/src/pages/terms-of-use/terms-of-use.html
@@ -26,7 +26,7 @@
         <div class="card-title-block">
           <ion-item>
             <ion-avatar item-start>
-              <img src="https://cdn.agility360app.net/">
+              <ion-img src="https://cdn.agility360app.net/">
             </ion-avatar>
             <p>Updated: {{ post.date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
           </ion-item>
@@ -36,7 +36,7 @@
           <ion-item>
             <ion-row>
               <ion-col>
-                <img src="{{ post.featured_media_url }}">
+                <ion-img src="{{ post.featured_media_url }}">
               <div class="wordpress" text-wrap [innerHtml]="post.content.rendered | safeHtml"></div>
               </ion-col>
             </ion-row>
