fix http error retry button. move app background image to CDN

--- a/src/pages/http-error/http-error.html
+++ b/src/pages/http-error/http-error.html
@@ -1,5 +1,5 @@
 <ion-content  padding class="app-background">
-  <form (submit)="login()">
+  <form (submit)="retryButtonClick()">
     <div text-center class="logo">
       <img src="assets/error_cloud_filled.png" width="50%"/>
     </div>
